@@ -1,3 +1,5 @@
+2025-07-21: [BREAKING CHNAGE] More changes to `CurrentLayout` in qtile so you need latest
+                              git version of qtile to be installed.
 2025-07-12: [BREAKING CHANGE] Qtile has removed `CurrentLayoutIcon` as it is now part of
                               `CurrentLayout`. qtile-extras has been updated to match.
 2025-06-15: [FEATURE] Add `Tetris` widget
